--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # Required Variables
-warp_id = "" # Your WARP/WARP+ ID
+WARP_ID = "" # Your WARP/WARP+ ID
 SEND_LOG = "" # 0 For No and 1 For Yes
 # Optional Variables
 # Required only if SEND_LOG = "1"
